--- a/frontend/src/css/style.css
+++ b/frontend/src/css/style.css
@@ -1,11 +1,18 @@
-
+.button-group button:disabled {
+    background-color: #ccc;
+    cursor: not-allowed;
+    color: #666;
+}
+/* селектор по элементу input, у которых атрибут = checkbox */
 input[type="checkbox"] {
     width: 24px;
     height: 24px;
     border: 2px solid #0056b3;
     transition: background-color 0.3s ease, border-color 0.3s ease;
 }
-/* Общие стили для страницы */
+/* Общие стили для страницы
+селектор по эдементу
+наследование всемии элементами body свойства font-family*/
 body {
     font-family: Arial, sans-serif;
     margin: 0;
@@ -39,7 +46,8 @@ th {
     background-color: #f2f2f2;
 }
 
-/* Стили для кнопок */
+/* Стили для кнопок
+селектор по классу */
 .button-group {
     display: flex;
     justify-content: center;
@@ -57,6 +65,8 @@ th {
     border-radius: 5px;
 }
 
+/* селектор по псевдоклассу
+каскадирует верхнее правило*/
 .button-group button:hover {
     background-color: #0056b3;
 }
